--- a/servicio-postulante-dev.properties
+++ b/servicio-postulante-dev.properties
@@ -7,4 +7,6 @@ spring.datasource.password= root
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= create
+#Hystrix configuracion
+management.endpoints.web.exposure.include= hystrix.stream
 
